# comptrans

./: LICENSE  Main.hs  comptrans.cabal  package.yaml
Data/Comp/: Trans.hs
Data/Comp/Derive/: Generic.hs
Data/Comp/Trans/: Collect.hs  DeriveMulti.hs  DeriveTrans.hs  DeriveUntrans.hs  Names.hs  Util.hs
Tarski/Data/Comp/: Trans.hs
Tarski/Data/Comp/Derive/: Generic.hs
Tarski/Data/Comp/Trans/: Collect.hs  DeriveMulti.hs  DeriveTrans.hs  DeriveUntrans.hs  Names.hs
examples/: GenericExample.hs~
examples/java/Tarski/Language/: Info.hs
examples/java/Tarski/Language/Java/Parametric/: Full.hs
examples/java/Tarski/Language/Java/Parametric/Full/: Names.hs  Trans.hs  Types.hs
examples/java/Tarski/Language/Parametric/: Derive.hs  InjF.hs
examples/java/Tarski/Language/Parametric/Syntax/: Functor.hs
examples/java/Tarski/SCM/: Src.hs
examples/java/Tarski/Sin/Compdata/: Derive.hs  Instances.hs
