Name:                comptrans
Version:             0.1.0.0
Synopsis:            
Description:         
License:             AllRightsReserved
License-File:        LICENSE
Author:              James Koppel
Copyright:           2013 Tarski Technologies
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8

Library

  Extensions:
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    KindSignatures
    MultiParamTypeClasses
    OverlappingInstances
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  Ghc-Options:
    -Wall

  Exposed-Modules:     
                       Tarski.Data.Comp.Derive.Generic
                       Tarski.Data.Comp.Trans

  Other-Modules:       
                       Tarski.Data.Comp.Trans.Collect
                       Tarski.Data.Comp.Trans.DeriveMulti
                       Tarski.Data.Comp.Trans.DeriveTrans
                       Tarski.Data.Comp.Trans.DeriveUntrans
                       Tarski.Data.Comp.Trans.Names

  Build-Depends:       base >=4.4 && < 4.7
                     , compdata <= 0.8
                     , containers <= 0.6
                     , lens <= 3.10
                     , template-haskell
                     , th-expand-syns <= 0.4
                     , ghc-prim 
                     , deepseq
                     , deepseq-generics >= 0.1.1